April 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/peopsxgl/soft.c: Applied the same fix by edgbla as dfxvideo.

April 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/freeze.c: Fixed the sound doesn't always play properly
   after loading the state. (Thanks edgbla)
 * libpcsxcore/psxmem.c: Fixed KKND freeze at startup. (edgbla)
 * libpcsxcore/gte.c: Fixed gteDCPL. (edgbla)
 * AUTHORS: Updated info.

April 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/gte.c: Use u32 instead of unsigned long.
 * COPYING: Fixed a typo in FSF's address.
 * plugins/dfxvideo/soft.c: Army Man invisible bullets fix (courtesy of
   edgbla).
 * AUTHORS: Updated info.
 * data/pcsx.glade2: Likewise.

April 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/gte.c: Backported the new GTE code from PCSX-Revolution project
   (http://code.google.com/p/pcsx-revolution), which is more accurate & fixes
   at least graphic corruption problems with Mat Hoffman's Pro BMX.
 * libpcsxcore/gte.h: Likewise.
 * libpcsxcore/r3000a.h: Likewise.
 * libpcsxcore/ppc/pGte.h: Call functions in gte.c instead of generating
   machine code directly for now.
 * libpcsxcore/ix86_64/iGte.h: Likewise.
 * libpcsxcore/ix86/iGte.h: Likewise.
 * libpcsxcore/debug.h: Removed GTE_DUMP.
 * gui/LnxMain.c: Likewise.
 * macosx/main.m: Likewise.
 * win32/gui/WndMain.c: Likewise.

April 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Check the CRC value of subchannel after reading.
 * gui/DebugMemory.c: Allow using a hexa string instead of one value for
   Memory Patch.
 * po/zh_CN.po, po/zh_TW.po, po/it.po, po/pt_BR.po, po/pcsx.pot: Updated.

April 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * data/pcsx.glade2: Added "Memory Dump" to menu item. Added Memory Viewer
   dialog box. Added more info to About dialog box.
 * gui/Gtk2Gui.c: Likewise.
 * gui/DebugMemory.c: Implemented memory viewer/dumper.
 * gui/DebugMemory.h: Likewise.